force-app/main/default/Objects/Skill__c/Skill__c.object-meta.xml
<CustomObject>
    <description>the ability, coming from one&apos;s knowledge, practice, aptitude, etc., to do something well.</description>
    <label>Skill</label>
    <nameField>
        <displayFormat>Skill{000}</displayFormat>
        <label>Skill Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>