force-app/main/default/objects/Skill__c/fields/RESOLVE_Phase__c.field-meta.xml
<CustomField>
    <fullName>RESOLVE_Phase__c</fullName>
    <description>Tags each skill to the RESOLVE phase where it is most relevant. GetAssessmentContext Action uses this to surface phase-appropriate skill assessments. If a skill is not connected to a RESOLVE phase, value will be NA.</description>
    <inlineHelpText>Tags each skill to the RESOLVE phase where it is most relevant. GetAssessmentContext Action uses this to surface phase-appropriate skill assessments. If a skill is not connected to a RESOLVE phase, value will be NA.</inlineHelpText>
    <label>RESOLVE Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recognize</fullName>
            </value>
            <value>
                <fullName>Explore</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Outline</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Verify</fullName>
            </value>
            <value>
                <fullName>Evolve</fullName>
            </value>
            <value>
                <fullName>All-Phases</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>