force-app/main/default/objects/Skill__c/fields/Skill_Category__c.field-meta.xml
<CustomField>
    <fullName>Skill_Category__c</fullName>
    <description>Groups skills for cohort-level reporting and Agentforce Action filtering. Penny uses to surface relevant skills based on learner&apos;s current RESOLVE phase.</description>
    <inlineHelpText>Groups skills for cohort-level reporting and Agentforce Action filtering. Penny uses to surface relevant skills based on learner&apos;s current RESOLVE phase.</inlineHelpText>
    <label>Skill Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce-Admin</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Problem-Solving</fullName>
            </value>
            <value>
                <fullName>RESOLVE-Methodology</fullName>
            </value>
            <value>
                <fullName>Stakeholder-Management</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Career-Readiness</fullName>
            </value>
            <value>
                <fullName>Technical-Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>