force-app/main/default/Objects/Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <description>Name of the skill</description>
    <inlineHelpText>Name of the skill</inlineHelpText>
    <label>Skill Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>