force-app/main/default/Objects/Skill__c/fields/SkillDescription__c.field-meta.xml
<CustomField>
    <fullName>SkillDescription__c</fullName>
    <description>Full description of the skill</description>
    <inlineHelpText>Full description of the skill</inlineHelpText>
    <label>Skill Description</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>