force-app/main/default/Objects/Skill__c/fields/SkillExamples__c.field-meta.xml
<CustomField>
    <fullName>SkillExamples__c</fullName>
    <description>List of examples about the skill</description>
    <inlineHelpText>List of examples about the skill</inlineHelpText>
    <label>Skill Examples</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>