force-app/main/default/Objects/Skill__c/fields/SkillResources__c.field-meta.xml
<CustomField>
    <fullName>SkillResources__c</fullName>
    <description>List of resources related to the skill</description>
    <inlineHelpText>List of resources related to the skill</inlineHelpText>
    <label>Skill Resources</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>