force-app/main/default/Objects/Skill__c/fields/TotalQuestions__c.field-meta.xml
<CustomField>
    <fullName>TotalQuestions__c</fullName>
    <description>Total number of questions related to the skill</description>
    <inlineHelpText>Total number of questions related to the skill</inlineHelpText>
    <label>Total Questions</label>
    <summaryForeignKey>SkillQuestion__c.Skill__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>