force-app/main/default/Objects/Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Skill_Name__c</columns>
    <columns>TotalQuestions__c</columns>
    <columns>SkillDescription__c</columns>
    <columns>SkillExamples__c</columns>
    <columns>SkillResources__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>